--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
 beautifulsoup4==4.13.4
+joblib==1.5.1
+lxml==5.3.0
+numpy==2.3.2
+pandas==2.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.7.1
+scipy==1.16.1
+six==1.17.0
 soupsieve==2.7
+threadpoolctl==3.6.0
 typing_extensions==4.14.1
+tzdata==2025.2
